Minor fix
-fix naming in swagger and code
-add "delete" API
