# server.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const {getAnthology, addAnthology, deleteAnthology,
-    updateAnthology, getAnthologies, getBranch,
-    getBranches, getUrlUpdate, getUrlAll,
+    getAnthologies, getBranch,
+    getBranches, getUrlUpdate, getDataByBranchId,
     uiGetAntol, uiGetBranch, uiGetUrl,
     getUrlOne, uiGetUrlTrOne, uiGetUrlBrOne} = require('./helpers/AnthologyTree');
 const app = express();
@@ -14,7 +14,6 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.route('/Anthology')
    .get(getAnthology)
    .post(addAnthology)
-   .patch(updateAnthology)
    .delete(deleteAnthology)
 app.route('/Anthologies')
    .get(getAnthologies)
@@ -22,10 +21,10 @@ app.route('/Branches')
    .get(getBranches)
 app.route('/Branch')
    .get(getBranch)
-app.route('/urlupdate')
+app.route('/RunCollectDataByTreeId')
    .get(getUrlUpdate)
-app.route('/urlall')
-    .get(getUrlAll)
+app.route('/DataByBranchId')
+    .get(getDataByBranchId)
 app.route('/urlone')
     .get(getUrlOne)
 
@@ -45,21 +44,6 @@ app.route('/ui/urlsbytreeid')
 app.route('/ui/urlsbybranchid')
     .get(uiGetUrlBrOne)
 
-//API fro UI
-app.route('/ui/anthology')
-   .get(uiGetAntol)
-app.route('/ui/branches')
-    .get(uiGetBranch)
-app.route('/ui/urllist')
-    .get(uiGetUrl)
-app.route('/ui/treebyid')
-    .get(getAnthology)
-app.route('/ui/branchbyid')
-    .get(getBranch)
-app.route('/ui/urlsbytreeid')
-    .get(uiGetUrlTrOne)
-app.route('/ui/urlsbybranchid')
-    .get(uiGetUrlBrOne)
 
 app.listen(4402, function(){
     console.log('Api start')
